# frepple-data-admin

./: .gitignore  .lgtm.yml  Gruntfile.js  LICENSE  MANIFEST.IN  README.md  djangosettings.py  frepplectl.py  package.json  requirements.txt  setup.cfg
.github/workflows/: python-app.yml
data_admin/: __init__.py  admin.py  menu.py  settings.py  urls.py  wsgi.py
data_admin/boot/: __init__.py
data_admin/common/: __init__.py  admin.py  adminforms.py  apps.py  auth.py  contextprocessors.py  dashboard.py  dataload.py  fields.py  menu.py  menus.py  middleware.py  migrate.py  models.py  notifications.py  report.py  serializers.py  templatetags.py  urls.py  views.py  widget.py
data_admin/common/api/: renderers.py  serializers.py  views.py
data_admin/common/management/: __init__.py
data_admin/common/migrations/: 0001_initial.py
data_admin/common/registration/: forms.py  views.py
data_admin/common/tests/: seleniumsetup.py  tests.py
data_admin/execute/: menu.py  models.py  urls.py  views.py
data_admin/execute/management/: __init__.py
data_admin/execute/migrations/: 0001_initial.py
data_admin_examples/example1/: admin.py  menu.py  models.py  notifications.py  serializers.py  tests.py  urls.py  views.py
data_admin_examples/example1/fixtures/: example1.json
data_admin_examples/example1/migrations/: 0001_initial.py
docs/: conf.py  index.rst  release-notes.rst
docs/developer-guide/: index.rst  multi-model.rst  upgrading.rst
docs/getting-started/: building-your-first-app.rst  index.rst  installation.rst  running-the-example-app.rst
docs/getting-started/my_app/: admin.py  menu.py  models.py  serializers.py  views.py
docs/integration-guide/: batch-commands.rst  csv-files.rst  excel-files.rst  index.rst  remote-commands.rst
docs/integration-guide/rest-api/: detail-api-from-your-browser.rst  index.rst  (+1 more)
docs/user-guide/: command-reference.rst  data-maintenance.rst  execute.rst  exporting-data.rst  home.rst  index.rst  what-if-scenarios.rst
(+23 files in other folders)
