[metadata]
name = frepple-data-admin
version = 6.0.0
author = https://frepple.org
author_email = info@frepple.com
description = A framework for rapid development of enterprise applications
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/frepple/data-admin
project_urls =
    Bug Tracker = https://github.com/frepple/data-admin/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = data-admin
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src