[metadata]
name = frepple-data-admin
version = 1.0.0
author = https://frepple.org
author_email = info@frepple.com
description = A framework for rapid development of enterprise applications
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/frepple/frepple-data-admin
project_urls =
    Source = https://github.com/frepple/frepple-data-admin
    Bug Tracker = https://github.com/frepple/frepple-data-admin/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    
install_requires = [
  'djangorestframework == 3.11.2',
  'djangorestframework-bulk == 0.2.1',
  'djangorestframework-filters',
  'django-admin-bootstrapped',
  'django-bootstrap3 == 11.1.0',
  'django-filter == 2.1.0',
  'html5lib == 1.0.1',
  'jdcal == 1.4.1',
  'Markdown == 3.1.1',
  'openpyxl == 2.6.2',
  'lxml == 4.6.3',
  'PyJWT == 1.7.1',
  'requests == 2.23.0',
  'python-dateutil == 2.8.1',
  'pillow == 8.1.2',
  'psutil == 5.7.3',
  'https://github.com/frePPLe/django/tarball/frepple_6.0',
  'psycopg2'
  ]

[options]
packages = find:
python_requires = >=3.6
zip_safe = False

[options.packages.find]
where =